socket.io game move events

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,14 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Gungi.io is an online free two-player strategy game inspired by the anime Hunter × Hunter anime. As in chess/shogi the goal is to trap the king!"
+		/>
+		<meta property="og:title" content="Gungi.io" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.gungi.io/" />
+		<meta
+			property="og:image"
+			content="https://www.gungi.io/images/home_still.PNG"
 		/>
 		<style>
 			::selection {
