game events, player disconnect

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,10 @@
 		/>
 		<meta property="og:title" content="Gungi.io" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.gungi.io/" />
+		<meta property="og:url" content="https://gungi.io/" />
 		<meta
 			property="og:image"
-			content="https://www.gungi.io/images/home_still.PNG"
+			content="https://gungi.io/images/link_preview.png"
 		/>
 		<style>
 			::selection {
