--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,10 @@
 			name="description"
 			content="Gungi.io is an online free two-player strategy game inspired by the anime Hunter × Hunter anime. As in chess/shogi the goal is to trap the king!"
 		/>
+		<meta
+			property="og:description"
+			content="Gungi.io is an online free two-player strategy game inspired by the anime Hunter × Hunter anime. As in chess/shogi the goal is to trap the king!"
+		/>
 		<meta property="og:title" content="Gungi.io" />
 		<meta property="og:type" content="website" />
 		<meta
